--- a/src/app/fcomponents/admin/admin-dialogs/cart-dialog/cart-dialog.component.html
+++ b/src/app/fcomponents/admin/admin-dialogs/cart-dialog/cart-dialog.component.html
@@ -69,29 +69,63 @@
             </tr>
             <!-- Add link to product (when user click on product title -->
             <tr *ngFor="let prod of cartProdList">
-               <td style="font-size:11px;">{{prod.title}}</td>
-               <td>{{prod.quantity}}</td>
+               <td style="font-size:11px;"><a style="color:black"
+                     [routerLink]="['/product', prod.prodId]">{{prod.title}}</a></td>
+               <td><input #prodQuantity type="number" style="width:50px"
+                     (click)="updateQuantity(prod,prodQuantity.value)" value="{{prod.quantity}}"></td>
                <td>{{prod.price}}</td>
-               <td><button class="btn btn-danger" (click)="deleteCardProd(prod.cartId)">X</button></td>
+               <td><button class="btn btn-danger" (click)="deleteCardProd(prod.id)">X</button></td>
                <!-- Add button to trigger a popover that allows user to change quantity of product -->
                <!-- This change needs to be validated, that it is of a minimum of 1 -->
             </tr>
          </table>
+         <div class="ml-1 mt-1">
+            <mat-form-field style="width:50%">
+              <mat-label>Prod Id</mat-label>
+              <input matInput #prodId placeholder="Ex. 220">
+            </mat-form-field>
+            <br>
+            <mat-form-field *ngIf="hasId" style="width:50%">
+               <mat-label>Id</mat-label>
+               <input matInput #prodId placeholder="Ex. 220">
+               <br>
+            </mat-form-field>
+           
+            <button  mat-raised-button type="button" (click)="searchProdId(prodId.value)" class="searchButton">Add Product</button>
+          </div>
          <!-- At end, allow user to add new product by searching the new product's productID and entering a quantity -->
          <br>
 
-         <button class="btn btn-primary" (click)="upadateCart()" [disabled]="isLoading==true">Save Order Changes
+         <button class="btn btn-primary" (click)="updateCart()" [disabled]="isLoading==true">Save Order Changes
             保存订单信息</button>
       </div>
       <br>
       <hr>
-      <br>
-      <div class="row">
+      <br><br><br><br><br><br><br>
+   </div>
+   
+   <div class="row mt-2">
+      <div class="col-12">
+         <h5>Payment 付款信息:</h5>
+      </div>
+      <div class="col-4">Rental fees paid</div>
+      <div class="col-4">Bond paid</div>
+      <div class="col-4">Transport fees paid</div>
+      <div class="form-group col-4">
+         <input class="form-control" name="firstName" [(ngModel)]="contactForm.firstName" #firstName="ngModel">
+      </div>
+      <div class="form-group col-4">
+         <input class="form-control" name="lastName" [(ngModel)]="contactForm.lastName" #lastName="ngModel">
+      </div>
 
-      <h5>Payment 付款信息</h5>
-         <!-- Add  amount this customer has paid in rental fees (deposit) . Allow for user to edit -->
-         <!-- Add amount this customer has paid in bond. Allow user to edit -->
-         <!-- Add amount this customer has paid in transport fees. Allow user to edit -->
+      <div class="form-group col-4">
+         <input class="form-control" name="email" [(ngModel)]="contactForm.email" #email="ngModel">
+      </div>
+      <!-- Add  amount this customer has paid in rental fees (deposit) . Allow for user to edit -->
+      <!-- Add amount this customer has paid in bond. Allow user to edit -->
+      <!-- Add amount this customer has paid in transport fees. Allow user to edit -->
+      <div class="col-12">
+         <button class="btn btn-primary" (click)="updateContact()" [disabled]="isLoading==true">Save Payment Information 保存付款信息</button>
       </div>
    </div>
 
@@ -100,3 +134,5 @@
 <mat-dialog-actions>
    <button type="button" class="btn btn-outline-secondary" (click)="close()">Close</button>
 </mat-dialog-actions>
+
+<!-- -->
