--- a/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.html
@@ -112,7 +112,7 @@
                       </textarea>
    </div>
 
-   <div *ngIf="isShoppingCartValid" class="invalid_feedback mb-4">{{feedback_message}}</div>
+   <div *ngIf="isShoppingCartValid && !isSendingEmail" class="invalid_feedback mb-4">{{feedback_message}}</div>
    <div class="row">
       <div class="col-12 text-center"><button class="btn btn-outline-gold btn-block" type="submit"
             [disabled]="isSendingEmail || isCartEmpty || !isShoppingCartValid">Submit</button></div>
