edited payment result page

--- a/src/app/fcomponents/admin/admin-cart/admin-cart.component.css
+++ b/src/app/fcomponents/admin/admin-cart/admin-cart.component.css
@@ -40,7 +40,15 @@ td{
 	padding: 3px 10px;
 	width: 150px;
   }
-  .searchButton{
-      width: 100%;
+  .searchButton1{
+      width: 150px;
+      margin-top:4px
+  }
+  .searchButton2{
+      width: 120%;
       margin-bottom:13px
   }
+  .searchButton3{
+      width:200px
+  }
+  
