--- a/src/app/fcomponents/admin/admin-dialogs/cart-dialog/cart-dialog.component.html
+++ b/src/app/fcomponents/admin/admin-dialogs/cart-dialog/cart-dialog.component.html
@@ -95,7 +95,7 @@
           </div>
          <!-- At end, allow user to add new product by searching the new product's productID and entering a quantity -->
          <br>
-
+         <h5>Payment 付款信息:</h5>
          <button class="btn btn-primary" (click)="updateCart()" [disabled]="isLoading==true">Save Order Changes
             保存订单信息</button>
       </div>
@@ -106,13 +106,13 @@
    
    <div class="row mt-2">
       <div class="col-12">
-         <h5>Payment 付款信息:</h5>
+         <h5>Payment 付款信息</h5>
       </div>
       <div class="col-4">Rental fees paid</div>
       <div class="col-4">Bond paid</div>
       <div class="col-4">Transport fees paid</div>
       <div class="form-group col-4">
-         <input class="form-control" name="firstName" [(ngModel)]="contactForm.firstName" #firstName="ngModel">
+         <input class="form-control" name="rental Fees" [(ngModel)]="contactForm.firstName" #firstName="ngModel">
       </div>
       <div class="form-group col-4">
          <input class="form-control" name="lastName" [(ngModel)]="contactForm.lastName" #lastName="ngModel">
