--- a/src/app/fcomponents/admin/admin-dialogs/child-products-dialog/child-products-dialog.component.html
+++ b/src/app/fcomponents/admin/admin-dialogs/child-products-dialog/child-products-dialog.component.html
@@ -19,13 +19,17 @@
                 adaptivePosition: true,
 				showWeekNumbers: false,
 				dateInputFormat: 'DD MMM, YYYY'}">
-        <!-- <span>{{ chosenDate | date }}</span> -->
-       
+		<button *ngIf="!childProducts[0]" type="button" class="btn btn-info ml-5" 
+				placement="bottom"
+				popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+				(click)="getDetailProductTime(prodId)">
+			<i class="fas fa-calendar-alt"> </i> 
+		</button>
     </div>
 
     <!-- Child Product Table -->
-	<div id="tableWrap">
-		<table class="table">
+	<div id="tableWrap" style="min-height: 200px;">
+		<table *ngIf="childProducts[0]" class="table">
             <!-- Table Head -->
 			<thead class="table-secondary text-center">
 				<th><span>Child ID<br>子产品ID</span></th>
@@ -62,26 +66,12 @@
 					<td>{{ childProduct.totalStock }}</td>
                     <td>{{ childProduct.availableStock }}</td>
 					<td width="30%">
-						<i class="fas fa-calendar-alt"> </i> 
-						<input bsDatepicker class="form-control ml-1"
-							placeholder="Calender of {{ childProduct.productDetail1 }}" 
-							style="width: 200px; display: inline-block;"
-							[minDate]="minDate" [datesDisabled]="emptyDates"
-							[maxDate]="maxDate" 
-                            [outsideClick]="true"
-                            (bsValueChange)="onValueChange($event)"
-							[bsConfig]="{
-								rangeInputFormat: 'MMMM Do', containerClass:'theme-orange',
-								selectFromOtherMonth: true,
-								adaptivePosition: true,
-								showWeekNumbers: false,
-								adaptivePosition: true,
-								dateInputFormat: 'DD MMM, YYYY'
-							}"
-							(click)="getDetailProductTime(childProduct.id)">
-                    </td>
-                    <td *ngIf="chosenDate">
-                     
+						<button type="button" class="btn btn-info" 
+								placement="bottom"
+								popover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+								(click)="getDetailProductTime(childProduct.id)">
+							<i class="fas fa-calendar-alt"> </i> 
+						</button>
                     </td>
 				</tr>
 			</tbody>
