--- a/src/app/fcomponents/admin/admin-products/admin-products.component.html
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.html
@@ -45,7 +45,7 @@
 				<td width="20%">{{data.title}}
 					<br>
 					<!-- Button to Toggle Child Product List Dialog  -->
-					<button *ngIf="data.productDetail[0]" (click)="openChildProductDialog(data)"
+					<button (click)="openChildProductDialog(data)"
 						class="btn btn-info btn-sm">
 						<i class="far fa-eye mr-1"></i>
 						<i class="fas fa-angle-down"></i>
