--- a/src/app/fcomponents/admin/admin-dialogs/child-products-dialog/child-products-dialog.component.html
+++ b/src/app/fcomponents/admin/admin-dialogs/child-products-dialog/child-products-dialog.component.html
@@ -1,14 +1,15 @@
 <mat-dialog-content>
-	<div class="row">
-		<h5 class="col-12 text-center">{{ productName }}</h5>
+    <div class="row">
+        <h5 class="col-12 text-center">{{ productName }}</h5>
     </div>
     <div class="row ml-2 my-2">
-        <i class="fas fa-calendar-alt mt-1"> </i> 
+        <i class="fas fa-calendar-alt mt-1"> </i>
         <span class="ml-1">
             View Specific Date <br>
             查看指定日期
         </span>
-        <input bsDatepicker type="text" class="form-control ml-3" 
+
+        <!-- <input bsDatepicker type="text" class="form-control ml-3" 
             placeholder="Pick a date | 选择日期" style="width: 280px;"
             [minDate]="minDate" [maxDate]="maxDate"
             [datesDisabled]="emptyDates" [outsideClick]="true"
@@ -18,26 +19,27 @@
                 selectFromOtherMonth: true,
                 adaptivePosition: true,
 				showWeekNumbers: false,
-				dateInputFormat: 'DD MMM, YYYY'}">
+				dateInputFormat: 'DD MMM, YYYY'}"> -->
         <!-- <span>{{ chosenDate | date }}</span> -->
-       
+
+
     </div>
 
     <!-- Child Product Table -->
-	<div id="tableWrap">
-		<table class="table">
+    <div id="tableWrap">
+        <table class="table">
             <!-- Table Head -->
-			<thead class="table-secondary text-center">
-				<th><span>Child ID<br>子产品ID</span></th>
-				<th><span>Name<br>名称</span></th>
-				<th><span>Current Total Stock<br>目前总库存</span></th>
+            <thead class="table-secondary text-center">
+                <th><span>Child ID<br>子产品ID</span></th>
+                <th><span>Name<br>名称</span></th>
+                <th><span>Current Total Stock<br>目前总库存</span></th>
                 <th>
                     <span>Current Available Stock<br>目前可用库存</span>
                 </th>
-				<th>
+                <th>
                     <span style="font-weight: lighter; font-size: smaller;">
-                        From <i> {{ minDate | date:'dd-MMM-yyy' }}</i> 
-					    <br>to <i> {{ maxDate | date:'dd-MMM-yyy' }}</i> 
+                        From <i> {{ minDate | date:'dd-MMM-yyy' }}</i>
+                        <br>to <i> {{ maxDate | date:'dd-MMM-yyy' }}</i>
                     </span> <br>
                     <span>Calender 日历</span>
                 </th>
@@ -51,42 +53,38 @@
                     </span>
                 </th>
             </thead>
-            
+
             <!-- Table Body -->
-			<tbody>
-				<tr *ngFor="let childProduct of childProducts" id="name" style="text-align: center;">
-					<td width="10%">{{ childProduct.id }}</td>
-					<td width="18%">
-                      {{ childProduct.productDetail1 }}
+            <tbody>
+                <tr *ngFor="let childProduct of childProducts" id="name" style="text-align: center;">
+                    <td width="10%">{{ childProduct.id }}</td>
+                    <td width="18%">
+                        {{ childProduct.productDetail1 }}
                     </td>
-					<td>{{ childProduct.totalStock }}</td>
+                    <td>{{ childProduct.totalStock }}</td>
                     <td>{{ childProduct.availableStock }}</td>
-					<td width="30%">
-						<i class="fas fa-calendar-alt"> </i> 
-						<input bsDatepicker class="form-control ml-1"
-							placeholder="Calender of {{ childProduct.productDetail1 }}" 
-							style="width: 200px; display: inline-block;"
-							[minDate]="minDate" [datesDisabled]="emptyDates"
-							[maxDate]="maxDate" 
-                            [outsideClick]="true"
-                            (bsValueChange)="onValueChange($event)"
-							[bsConfig]="{
+                    <td width="30%">
+                        <i class="fas fa-calendar-alt"> </i>
+                        <input bsDatepicker class="form-control ml-1"
+                            placeholder="Calender of {{ childProduct.productDetail1 }}"
+                            style="width: 200px; display: inline-block;" [minDate]="minDate"
+                            [datesDisabled]="emptyDates" [maxDate]="maxDate" [outsideClick]="true"
+                            (bsValueChange)="onValueChange($event)" [bsConfig]="{
 								rangeInputFormat: 'MMMM Do', containerClass:'theme-orange',
 								selectFromOtherMonth: true,
 								adaptivePosition: true,
 								showWeekNumbers: false,
 								adaptivePosition: true,
 								dateInputFormat: 'DD MMM, YYYY'
-							}"
-							(click)="getDetailProductTime(childProduct.id)">
+							}" (click)="getDetailProductTime(childProduct.id)">
                     </td>
                     <td *ngIf="chosenDate">
-                     
+
                     </td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <button type="button" class="btn btn-sm btn-info closeButton" (click)="close()">
         X Close
     </button>
