--- a/src/app/fcomponents/basic/user-dialog/popup-dialog/popup-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/popup-dialog/popup-dialog.component.html
@@ -1,56 +1,3 @@
-<style>
-	.wrap {
-		width: 80%;
-		margin: 0 auto;
-	}
-
-	.wrap>* {
-		width: 100%;
-	}
-
-	#logowrap {
-		width: 100%;
-		margin: 0 auto;
-		text-align: center;
-	}
-
-	#ButtonsWrap {
-		width: 100%;
-		margin: 0 auto;
-		text-align: center;
-		margin-top: 10px;
-	}
-
-	.mat-form-field {
-		display: block;
-	}
-
-	.slide {
-		margin: 0 auto;
-		margin-bottom: 20px;
-		text-align: center;
-		color: #c48f45;
-	}
-
-	.primaryButton {
-		background-color: #c48f45;
-		color: white;
-	}
-
-	p {
-		color: #c48f45;
-	}
-
-	mat-form-field {
-		display: block;
-		margin-bottom: 10px;
-	}
-
-	mat-dialog-actions {
-		display: block;
-	}
-</style>
-
 <!-- Sign up form for users -->
 <div class=wrap>
 	<div id="logowrap">
@@ -62,26 +9,22 @@
 	<form [formGroup]="informationForm" (ngSubmit)="onSubmit()">
 		<mat-dialog-content>
 			<mat-form-field>
-        <input matInput placeholder="Email address" formControlName="email" required>
-        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+				<input matInput placeholder="Email address" formControlName="email" required>
+				<mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
 			</mat-form-field>
 			<mat-form-field>
-        <input matInput placeholder="Phone number" formControlName="phone" required>
-        <mat-error *ngIf="phone.invalid">{{getErrorMessage2()}}</mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="How did you find about us?" formControlName="channel">
+				<input matInput placeholder="Phone number" formControlName="phone" required>
+				<mat-error *ngIf="phone.invalid">{{getErrorMessage2()}}</mat-error>
 			</mat-form-field>
-				
-
-			
-			
-		
-    </mat-dialog-content>
+			<mat-form-field>
+				<input matInput placeholder="How did you find about us?" formControlName="channel">
+			</mat-form-field>
+		</mat-dialog-content>
 		<mat-dialog-actions>
 			<div id="ButtonsWrap" class="mb-3">
 				<button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
-				<button mat-raised-button type="submit" [disabled]="!this.informationForm.valid" class="mx-2 primaryButton">Submit</button>
+				<button mat-raised-button type="submit" [disabled]="!this.informationForm.valid"
+					class="mx-2 primaryButton">Submit</button>
 			</div>
 		</mat-dialog-actions>
 		<hr>
