--- a/src/app/fcomponents/user-dashboard/user-dashboard.component.css
+++ b/src/app/fcomponents/user-dashboard/user-dashboard.component.css
@@ -7,3 +7,13 @@ p {
 span {
 	color: #c48f45;
 }
+mat-tab-group {
+	margin: 0 auto;
+	margin-top: 1%;
+}
+#buttonsWrap {
+	margin: 0 auto;
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
