--- a/src/app/fcomponents/admin/admin-dialogs/child-products-dialog/child-products-dialog.component.html
+++ b/src/app/fcomponents/admin/admin-dialogs/child-products-dialog/child-products-dialog.component.html
@@ -2,20 +2,22 @@
     <div class="row">
         <h5 class="col-12 text-center">{{ productName }}</h5>
     </div>
-    <div class="row ml-2 my-2">
-        <i class="fas fa-calendar-alt mt-1"> </i>
-        <span class="ml-1">
-            View Specific Date <br>
-            查看指定日期
-            <button type="button" class="btn btn-info" 
-                    (click)="getDetailProductTime(prodId)">
-                <i class="fas fa-calendar-alt"> </i> 
-            </button>
-
-        </span>
+    <div *ngIf="!childProducts[0]" class="row my-5">
+		<div style="margin: 0 auto; text-align: center;">
+			<p>No Child Product For This Item</p> <br>
+			<button type="button" class="btn btn-lg btn-info"
+					(click)="getDetailProductTime(prodId)">
+				<i class="fas fa-calendar-alt"> </i> 
+			</button>
+	        <h6 class="ml-1" style="color: #c48f45;">
+				<i class="fas fa-calendar-alt mt-1"> </i>
+	            View Specific Date <br>
+				查看指定日期
+			</h6>
         </div>
+	</div>
     <!-- Child Product Table -->
-	<div id="tableWrap" style="min-height: 200px;">
+	<div id="tableWrap" style="min-height: 50px;">
 		<table *ngIf="childProducts[0]" class="table">
             <!-- Table Head -->
             <thead class="table-secondary text-center">
