--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -1,3 +1,13 @@
+.ul-menu {
+	width: 80%;
+	margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+	.ul-menu {
+		width: 90%;
+	}
+}
 .navbar-light .navbar-nav .nav-link.active
 {
     color: #c48f45 !important;
