--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -89,7 +89,7 @@
 									formControlName="Price" [attr.disabled]="true">
 								<input
 									style="width:40px; height:20px; font-size:14px; border:none; border-bottom:1px solid #919191"
-									(click)="addQuantity(detail)" type="number" min="0" formControlName="Quantity"
+									(change)="addQuantity(detail)" type="number" min="0" formControlName="Quantity"
 									placeholder="Quantity">
 								<div *ngIf="detail.controls.Quantity.invalid" class="invalid_feedback"
 									style="padding-bottom:10px;" role="alert">Only {{detail.value.AvailableStock}} are
@@ -108,7 +108,7 @@
 				<div class="col-6 col-lg-6 s1"
 					*ngIf="!this.productDetail['productDetail'] || this.productDetail['productDetail'].length==0">
 					Quantity: <input type="number" [value]="quantity" min="0" max={{productDetail.availableStock}}
-						[(ngModel)]="quantity" (click)="quantitycheck(productDetail)"
+						[(ngModel)]="quantity" (change)="quantitycheck(productDetail)"
 						style="width:40px; height:20px; font-size:14px; border:none; border-bottom:1px solid #919191">
 				</div>
 				<div *ngIf="!this.productDetail['productDetail'] 
