--- a/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.css
+++ b/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.css
@@ -15,6 +15,9 @@
     z-index: 1;
     margin: -75px 0 0 -75px;
   }
+  .timeform{
+    width:300px
+  }
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
