--- a/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
@@ -17,6 +17,11 @@
 			(bsValueChange)="onReturnChange($event)">
 	</div>
 </div>
+<div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="!isTimeSame && prodsInCart.length!=0" >
+	{{errorMessage}}</div>
+<div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="isAlert && isShoppingCartValid">
+	Customer Service will confirm this order with you. You can get instant confirmation if you book from Friday to Monday.
+</div>
 <hr>
 <div class="row mb-3 productdiv" *ngFor="let prod of prodsInCart; index as i">
 	<div class="col-4 col-sm-4 col-md-4 col-lg-3" *ngIf="prod.url">
@@ -47,8 +52,6 @@
 	<br>
 	<br>
 </div>
-<div class="mb-2" *ngIf="!isShoppingCartValid && prodsInCart.length!=0" style="color:red;font-size:large">
-	{{errorMessage}}</div>
 <div class="text-right" *ngIf="totalPrice!=0 &&isShoppingCartValid">
 	<div class="mb-1">Rental Deposit <span style="color:red">Due Now</span>: NZ $<span
 			class="s2bold">{{depositFeeDue}}</span></div>
